--- a/about.html
+++ b/about.html
@@ -266,52 +266,61 @@
 
     <!-- ****** Footer ******* -->
     <footer class="c-footer">
-      <div class="c-dividerBlock half">
-        <div class="divBlock info">
-          <span class="title">ABOUT</span>
-          <p class="data">
-            The Kung Group is an Organization Consulting firm that works with
-            CEOs, managers, teams, and individual contributors. We have deep
-            expertise in developing customized solutions that are fast, simple,
-            results-based, and scale-able. We provide analysis, insight, and
-            solutions that identify the untapped talent and energy of your
-            workforce – the key to unlocking your company's hidden growth
-            engine.
-          </p>
-        </div>
+      <div class="row justify-content-center">
+        <div class="col-md-10 col-sm-12">
 
-        <div class="divBlock form">
-          <span class="title">CONNECT</span>
-          <div class="fotmField">
-            <label>Email Address *</label>
-            <input type="text" class="txtBox" />
-          </div>
-          <div class="btnField">
-            <a href="#" class="button-element" data-initialized="true"
-              >Submit</a
-            >
-          </div>
+          <div class="row">
 
-          <div class="socialNav">
-            <ul>
-              <li>
-                <a href="#" class="socialUrl">
-                  <i class="icon kg kg-linkedin"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="socialUrl">
-                  <i class="icon kg kg-mail"></i>
-                </a>
-              </li>
-            </ul>
+            <div class="col-sm-6 col-12">
+              <span class="title">ABOUT</span>
+              <p class="data">
+                The Kung Group is an Organization Consulting firm that works with
+                CEOs, managers, teams, and individual contributors. We have deep
+                expertise in developing customized solutions that are fast, simple,
+                results-based, and scale-able. We provide analysis, insight, and
+                solutions that identify the untapped talent and energy of your
+                workforce – the key to unlocking your company's hidden growth
+                engine.
+              </p>
+            </div>
+
+            <div class="col-md-1 d-sm-none d-xs-none d-md-block"></div>
+
+            <div class="col-md-5 col-sm-6 col-12">
+              <span class="title">CONNECT</span>
+              <div class="fotmField">
+                <label>Email Address *</label>
+                <input type="text" class="txtBox" />
+              </div>
+              <div class="btnField">
+                <a href="#" class="button-element" data-initialized="true">Submit</a>
+              </div>
+
+              <div class="socialNav">
+                <ul>
+                  <li>
+                    <a href="#" class="socialUrl">
+                      <i class="icon kg kg-linkedin"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="socialUrl">
+                      <i class="icon kg kg-mail"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
           </div>
-        </div>
+        </divc>
+      </div>
       </div>
 
       <div class="footerBottom">
         ©2017 The Kung Group
       </div>
+
     </footer>
     <!-- ****** Footer End ******* -->
 
