--- a/clients.html
+++ b/clients.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Index</title>
+    <title>Clients</title>
 
     <link href="./css/bootstrap.min.css" rel="stylesheet" />
     <link href="./css/styles.css" rel="stylesheet" />
@@ -47,121 +47,12 @@
     <!-- ****** Header End ******* -->
 
     <!-- ****** Image Block ******* -->
-    <div class="c-imgBlock">
+    <div class="c-imgBlock i3">
       <div class="infoBlock">
-        <h1 class="infoBlockText">
-          CULTIVATING <br />
-          POWERFUL ORGANIZATIONS
-        </h1>
-      </div>
-    </div>
-    <!-- ****** Image Block ******* -->
-
-    <!-- ****** Video Block ******* -->
-    <div class="c-videoBlock">
-      <div class="c-dividerBlock">
-        <div class="divider">
-          <div class="c-player">
-            <img src="images/videoImage.jpg" alt="" />
-          </div>
-        </div>
-        <div class="divider">
-          <div class="videoBlockInfo">
-            <div class="m34-btm">
-              <span class="title">A VIBRANT ORGANIZATION</span>
-              <p class="staticText">
-                A vibrant organization continually turns adversity into
-                momentum. Within the complexities of change and growth, there is
-                an opportunity for radical transformation.
-              </p>
-              <p class="staticText">
-                We create simple pathways to unleash the latent power of your
-                organization.
-              </p>
-            </div>
-
-            <div class="btnBlock">
-              <a href="/about" class="button-element" data-initialized="true"
-                >Learn More</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- ****** Video Block End ******* -->
-
-    <!-- ****** Image Block ******* -->
-    <div class="c-imgBlock type-1">
-      <div class="infoBlockTop">
-        <div class="block-1">
-          <h2 class="infoBlockText">SOLUTIONS</h2>
-          <p class="infoStaticText">
-            The approach is a process to uncover your company's unique DNA and
-            allow what’s exceptional to emerge. We work with you, your teams,
-            and your entire organization to remove obstacles and re-think what’s
-            possible.
-          </p>
-        </div>
-
-        <div class="block-2">
-          <div class="grid">
-            <div class="c-card">
-              <div class="card-icon">
-                <i class="icon kg kg-male"></i>
-              </div>
-              <div class="card-title">LEADERSHIP MASTERY</div>
-              <div class="card-info">
-                Leadership calls for authenticity, vision and ability to
-                inspire. We support the leader's journey to highest impact.
-              </div>
-              <div class="card-btn">
-                <a href="#" class="btn">
-                  Learn More
-                  <i class="icon kg kg-arrow-right"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="grid">
-            <div class="c-card">
-              <div class="card-icon">
-                <i class="icon kg kg-users"></i>
-              </div>
-              <div class="card-title">TEAM MASTERY</div>
-              <div class="card-info">
-                Effective teams are built on a foundation of trust. We provide a
-                process for scaling trust within and across teams.
-              </div>
-              <div class="card-btn">
-                <a href="#" class="btn">
-                  Learn More
-                  <i class="icon kg kg-arrow-right"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="grid">
-            <div class="c-card">
-              <div class="card-icon">
-                <i class="icon kg kg-line-chart-1"></i>
-              </div>
-              <div class="card-title">ORGANIZATIONAL MASTERY</div>
-              <div class="card-info">
-                Healthy organizations attain best in class performance through
-                collaboration and high quality relationships. We design roadmaps
-                for radical sustainable growth.
-              </div>
-              <div class="card-btn">
-                <a href="#" class="btn">
-                  Learn More
-                  <i class="icon kg kg-arrow-right"></i>
-                </a>
-              </div>
-            </div>
-          </div>
+        <div class="text-center">
+          <h1 class="infoBlockText">
+            WHAT CLIENTS HAVE TO SAY
+          </h1>
         </div>
       </div>
     </div>
@@ -169,19 +60,6 @@
 
     <!-- ****** Info Block ******* -->
     <div class="c-bodyContainer">
-
-      <div class="row justify-content-center">
-        <div class="col-md-10 col-sm-12">
-          <div class="row c-imageRow">
-            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
-            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
-            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
-            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
-          </div>
-        </div>
-      </div>
-
-
 
       <div class="c-testimon">
         <div class="c-dividerBlock half">
@@ -251,17 +129,44 @@
           </div>
         </div>
 
-        <div class="btnBlock">
-          <div class="btnDiv">
-            <a href="#" class="btn">
-              MEET Our Clients
-              <i class="icon kg kg-arrow-right"></i>
-            </a>
+      </div>
+    </div>
+    <!-- ****** Info Block End ******* -->
+
+    <!-- ****** Image Block ******* -->
+    <div class="c-imgBlock i4">
+      <div class="infoBlock">
+        <div class="text-center">
+          <h2 class="infoBlockText">
+            CLIENTS WE HAVE WORKED WITH
+          </h2>
+        </div>
+      </div>
+    </div>
+    <!-- ****** Image Block ******* -->
+
+    <!-- ****** Video Block ******* -->
+    <div class="c-bodyContainer">
+      <div class="row justify-content-center">
+        <div class="col-md-10 col-sm-12">
+          <div class="row c-imageRow">
+            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
+            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
+            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
+            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
+            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
+            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
+            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
+            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
+            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
+            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
+            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
+            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
           </div>
         </div>
       </div>
     </div>
-    <!-- ****** Info Block End ******* -->
+    <!-- ****** Video Block End ******* -->
 
     <!-- ****** Footer ******* -->
     <footer class="c-footer">
@@ -323,6 +228,8 @@
     </footer>
     <!-- ****** Footer End ******* -->
 
+    <script src="./js/jquery-3.4.1.min.js" type="text/javascript"></script>
+    <script src="./js/bootstrap.min.js" type="text/javascript"></script>
     <script src="./js/scripts.js" type="text/javascript"></script>
   </body>
 </html>
