--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
     <!-- ****** Header End ******* -->
 
     <!-- ****** Image Block ******* -->
-    <div class="c-imgBlock i3">
+    <div class="c-imgBlock sm i3">
       <div class="infoBlock">
         <div class="text-center">
           <h1 class="infoBlockText">
