--- a/about.html
+++ b/about.html
@@ -71,8 +71,47 @@
     </div>
     <!-- ****** Image Block ******* -->
 
+
     <!-- ****** Video Block ******* -->
     <div class="c-videoBlock type2">
+      <div class="row">
+        <div class="col-12 m17-btm">
+          <div class="sectHeading">We Are</div>
+        </div>
+
+        <div class="col-sm-4 col-12">
+          <span class="staticText"
+          ><strong>We are a community of professionals.</strong> We demand of
+          ourselves what we ask of others, and have deep experience in
+          developing leaders and high performing teams. We believe in the
+          application of authentic communication practices that help others
+          achieve their highest goals. We understand behavior and its
+          connection to obstructing and producing results.</span
+        >
+        </div>
+
+        <div class="col-sm-4 col-12">
+          <span class="staticText"
+          ><strong>We are business partners.</strong> We are advisers. We are
+          facilitators. We care passionately about the commitments we make,
+          and those we ask of others. We focus on things that make a
+          difference, and that would not happen without us.</span
+        >
+        </div>
+
+        <div class="col-sm-4 col-12">
+          <span class="staticText"
+            ><strong>We are collaborators.</strong> We help organizations and
+            Leaders reinvent themselves from the inside out, and believe it is
+            strategic imperative to do so.</span
+          >
+        </div>
+      </div>
+    </div>
+    <!-- ****** Video Block End ******* -->
+
+    <!-- ****** Video Block ******* -->
+    <!-- <div class="c-videoBlock type2">
       <div class="sectHeading">We Are</div>
       <div class="c-dividerBlock">
         <div class="divider">
@@ -101,7 +140,7 @@
           >
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- ****** Video Block End ******* -->
 
     <!-- ****** Image Block ******* -->
@@ -122,7 +161,7 @@
 
     <!-- ****** Video Block ******* -->
     <div class="c-videoBlock type2">
-      <div class="sectHeading">ABOUT</div>
+      <div class="sectHeading m17-btm">ABOUT</div>
       <div class="c-tabs">
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" id="myTab" role="tablist">
