--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
           <li><a href="./index.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
           <li class="hasChildmenu">
-            <a href="#">Solutions</a>
+            <a href="javascript:void(0);" class="c-link">Solutions <i class="icon kg kg-double-right"></i></a>
             <div class="subMenu">
+              <button class="subMenu_back">
+                <i class="icon kg kg-double-left"></i>Back</button>
               <a class="menuLink" href="./leadership.html">Leadership Mastery</a>
               <a class="menuLink" href="./team.html">Team Mastery</a>
               <a class="menuLink" href="./organizational.html">Organizational Mastery</a>
@@ -401,6 +403,10 @@
     </footer>
     <!-- ****** Footer End ******* -->
 
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
+  crossorigin="anonymous"></script>
     <script src="./js/scripts.js" type="text/javascript"></script>
   </body>
 </html>
